--- a/valgboksoppgave.html
+++ b/valgboksoppgave.html
@@ -26,7 +26,7 @@
     <input id="sizeslider" type="range" min="100" max="700" step="10" oninput="showDiv()" />
     <br>
     <h4>Avrunding</h4>
-    <input id="borderslider" type="range" min="0" max="45" step="1" oninput="showDiv()">
+    <input id="borderslider" type="range" min="0" max="50" step="1" oninput="showDiv()">
     <br /><input id="textinput" type="text" oninput="showDiv()" value="" />
    
     <select id="boks" onchange="showDiv()">
@@ -34,7 +34,7 @@
         <option value="green">Green Color</option>
         <option value="blue">Blue Color</option> 
         <option value="yellow">Yellow Color</option> 
-        <option value="pink">Pink Color</option> 
+        <option value="pink">Pink Color</option> S
         <option value="purple">Purple Color</option> 
         <option value="brown">Brown Color</option> 
     </select>
